[package]
name = "chromiumoxide_stealth"
version = "0.1.0"
edition = "2021"
description = "Enhance your Chromiumoxide automation with stealth capabilities"
repository = "https://github.com/cloei/chromiumoxide_stealth"
license = "MIT"
readme = "README.md"

[dependencies]
chromiumoxide = { version = "0.6.0", features = [
  "tokio-runtime",
], default-features = false }
tokio = { version = "1.38.1", features = ["full"] }
